feat: (요구사항 1) use FileInputStream library